Fix Nav spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -236,7 +236,7 @@ a:hover.nav-link {
 
 .body {
   background-color: white;
-  padding-top: 90px;
+  padding-top: 70px;
 }
 
 /* About */
